--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,5 +1,4 @@
---extra-index-url https://azuremlsdktestpypi.azureedge.net/promptflow/
-promptflow[azure]==1.2.0
+promptflow[azure]
 promptflow-tools==1.0.0
 python-dotenv
 bs4
