--- a/.github/workflows/samples_tutorials_flow_fine_tuning_evaluation_promptflow_quality_improvement.yml
+++ b/.github/workflows/samples_tutorials_flow_fine_tuning_evaluation_promptflow_quality_improvement.yml
@@ -74,14 +74,23 @@ jobs:
         working-directory: examples/tutorials/flow-fine-tuning-evaluation
         run: |
           cat bash_script.sh
+      - name: Set environ for canary workspace (scheduled runs only)
+        if: github.event_name == 'schedule'
+        run: |
+          export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+          export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
+      - name: Set environ for production workspace (scheduled runs only)
+        if: github.event_name != 'schedule'
+        run: |
+          export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+          export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_PROD }}
       - name: Run scripts
         working-directory: examples/tutorials/flow-fine-tuning-evaluation
         run: |
           export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
           export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
-          export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
-          export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
-          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
           bash bash_script.sh
       - name: Pip List for Debug
         if : ${{ always() }}
