--- a/.github/workflows/samples_flows_standard_basic_with_connection.yml
+++ b/.github/workflows/samples_flows_standard_basic_with_connection.yml
@@ -79,6 +79,7 @@ jobs:
           cat bash_script.sh
       - name: Run scripts against canary workspace (scheduled runs only)
         if: github.event_name == 'schedule'
+        working-directory: examples/flows/standard/basic-with-connection
         run: |
           export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
           export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
@@ -88,6 +89,7 @@ jobs:
           bash bash_script.sh
       - name: Run scripts against production workspace (scheduled runs only)
         if: github.event_name != 'schedule'
+        working-directory: examples/flows/standard/basic-with-connection
         run: |
           export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
           export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
