--- a/.github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml
+++ b/.github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml
@@ -84,6 +84,7 @@ jobs:
           cat bash_script.sh
       - name: Run scripts against canary workspace (scheduled runs only)
         if: github.event_name == 'schedule'
+        working-directory: examples/tutorials/e2e-development
         run: |
           export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
           export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
@@ -93,6 +94,7 @@ jobs:
           bash bash_script.sh
       - name: Run scripts against production workspace (scheduled runs only)
         if: github.event_name != 'schedule'
+        working-directory: examples/tutorials/e2e-development
         run: |
           export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
           export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
