--- a/.github/workflows/samples_tutorials_flow_deploy_distribute_flow_as_executable_app.yml
+++ b/.github/workflows/samples_tutorials_flow_deploy_distribute_flow_as_executable_app.yml
@@ -84,7 +84,7 @@ jobs:
           export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
           export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
           bash bash_script.sh
-      - name: Run scripts against production workspace (scheduled runs only)
+      - name: Run scripts against production workspace
         if: github.event_name != 'schedule'
         working-directory: examples/tutorials/flow-deploy/distribute-flow-as-executable-app
         run: |
