[example][bugfix] Set environ to make CIs run against production region in PR (#1492)
# Description

We observed current examples run against canary region in PR triggered
workflows, which results from the wrong environ set inside the workflow,
and promptflow does not honor `config.json` (which works for Azure ML
only). This PR targets to fix this by updating the template.

# All Promptflow Contribution checklist:
- [x] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [x] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [x] Title of the pull request is clear and informative.
- [x] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [x] Pull request includes test coverage for the included changes.

--- a/.github/workflows/samples_flows_chat_chat_with_pdf.yml
+++ b/.github/workflows/samples_flows_chat_chat_with_pdf.yml
@@ -82,7 +82,8 @@ jobs:
         working-directory: examples/flows/chat/chat-with-pdf
         run: |
           cat bash_script.sh
-      - name: Run scripts
+      - name: Run scripts against canary workspace (scheduled runs only)
+        if: github.event_name == 'schedule'
         working-directory: examples/flows/chat/chat-with-pdf
         run: |
           export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
@@ -90,6 +91,16 @@ jobs:
           export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
           export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
           export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
+          bash bash_script.sh
+      - name: Run scripts against production workspace
+        if: github.event_name != 'schedule'
+        working-directory: examples/flows/chat/chat-with-pdf
+        run: |
+          export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
+          export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
+          export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+          export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_PROD }}
           bash bash_script.sh
       - name: Pip List for Debug
         if : ${{ always() }}
