--- a/.github/workflows/check_enforcer.yml
+++ b/.github/workflows/check_enforcer.yml
@@ -16,166 +16,6 @@ jobs:
         working-directory: ${{ github.workspace }}
         shell: pwsh
         run: |
-            #SET-PSDEBUG -Trace 1
-            $first_commit = "${{ github.sha }}"
-            $github_repository = 'microsoft/promptflow'
-            $merge_commit = ""
-            
-            function get_diffs() {
-                $snippet_debug = 1
-
-                git log -1 | ForEach-Object {
-                    if ($_.Contains("Merge")) {
-                        $merge_commit = $_.Split(" ")[-3]
-                    }
-                }
-
-                if ($snippet_debug -eq 1) {
-                    Write-Output "merge_commit $merge_commit"
-                }
-            
-                $need_to_check = New-Object System.Collections.Generic.HashSet[string]
-                git diff --name-only HEAD origin/main | ForEach-Object {
-                    if ($snippet_debug -eq 1) {
-                        Write-Output "git diff --name-only HEAD main $_"
-                    }
-                    if ($_.Contains("src/promptflow")) {
-                        $need_to_check.Add("sdk_cli")
-                    }
-                }
-            
-                $failed_reason =  ""
-                $failedCount = 24 # Loop for 12 minutes.
-            
-                for ($i = 0; $i -lt $failedCount; $i++) {
-                    Start-Sleep -Seconds 30
-
-                    $failed_reason = ""
-                    
-                    $pipelines = @{
-                        "executor_e2e_tests" = 0;
-                        "executor_unit_tests" = 0;
-                        "sdk_cli_tests" = 0;
-                        "sdk_cli_global_config_tests" = 0;
-                        "sdk_cli_azure_test" = 0;
-                    }
-                    $pipelines_count = @{
-                        "executor_e2e_tests" = 0;
-                        "executor_unit_tests" = 0;
-                        "sdk_cli_tests" = 0;
-                        "sdk_cli_global_config_tests" = 0;
-                        "sdk_cli_azure_test" = 0;
-                    }
-                    
-                    foreach ($item in $need_to_check) {
-                        if ($item -eq "sdk_cli") {
-                            $pipelines.sdk_cli_tests = 4
-                            $pipelines.sdk_cli_global_config_tests = 1
-                            $pipelines.sdk_cli_azure_test = 4
-                        }
-                    }
-            
-                    # Get pipeline status.
-                    $valid_status_array = @()
-
-                    $(gh api /repos/microsoft/promptflow/commits/$merge_commit/check-suites) `
-                    | ConvertFrom-Json `
-                    | Select-Object -ExpandProperty check_suites `
-                    | ForEach-Object {
-                        if ($snippet_debug -eq 1) {
-                            Write-Output "check-suites id $($_.id)"
-                        }
-                        $suite_id = $_.id
-                        $(gh api /repos/microsoft/promptflow/check-suites/$suite_id/check-runs) `
-                        | ConvertFrom-Json `
-                        | Select-Object -ExpandProperty check_runs `
-                        | ForEach-Object {
-                            if ($snippet_debug -eq 1) {
-                                Write-Output "check runs name $($_.name)"
-                            }
-                            foreach ($key in $pipelines.Keys) {
-                                $value = $pipelines[$key]
-                                if ($value -eq 0) {
-                                    continue
-                                }
-                                if ($_.name.Contains($key)) {
-                                    $pipelines_count[$key] += 1
-                                    $valid_status_array += $_
-                                }
-                            }
-                        }
-                    }
-                    # Get pipelines of commit. count should match.
-                    foreach ($key in $pipelines.Keys) {
-                        if ($pipelines_count[$key] -lt $pipelines[$key]) {
-                            $failed_reason = "Not all pipelines are triggered."
-                        }
-                    }
-                    if ($failed_reason -ne "") {
-                        Write-Output "$failed_reason"
-                        if ($snippet_debug -eq 1) {
-                            Write-Output "pipelines_count"
-                            $pipelines_count.GetEnumerator() | ForEach-Object {
-                                Write-Output "  $($_.Key): $($_.Value)"
-                            }
-                        }
-                        continue
-                    }
-                    $pipelines_success_count = @{
-                        "executor_e2e_tests" = 0;
-                        "executor_unit_tests" = 0;
-                        "sdk_cli_tests" = 0;
-                        "sdk_cli_global_config_tests" = 0;
-                        "sdk_cli_azure_test" = 0;
-                    }
-                    
-                    # Get pipeline conclusion Priority:
-                    # 1. Not successful, Fail.
-                    # 2. Not finished, Continue.
-                    # 3. Successful, Break.
-
-                    $valid_status_array `
-                    | ForEach-Object {
-                        foreach ($key in $pipelines.Keys) {
-                            $value = $pipelines[$key]
-                            if ($value -eq 0) {
-                                continue
-                            }
-                            if ($_.name.Contains($key)) {
-                                if ($_.conclusion -ieq "success") {
-                                    $pipelines_success_count[$key] += 1
-                                } elseif ($_.conclusion -ieq "failure") {
-                                    $failed_reason = "Required pipelines are not successful."
-                                } else {
-                                    if ($failed_reason -eq "") {
-                                        $failed_reason = "Required pipelines are not finished."
-                                    }
-                                }
-                            }
-                            Write-Output "$($_.name) is $($_.conclusion)."
-                        }
-                    }
-                    if ($snippet_debug -eq 1) {
-                        Write-Output "pipelines_count"
-                        $pipelines_count.GetEnumerator() | ForEach-Object {
-                            Write-Output "  $($_.Key): $($_.Value)"
-                        }
-                    }
-                    if ($failed_reason.Contains("not successful")) {
-                        throw "$failed_reason"
-                    } elseif ($failed_reason.Contains("not finished")) {
-                        Write-Output "$failed_reason"
-                        continue
-                    } else {
-                        Write-Output "All required pipelines are successful."
-                        break
-                    }
-                }
-                if ($failed_reason -ne "") {
-                    throw "$failed_reason"
-                }
-            }
-            
-            get_diffs
+            . .\scripts\building\check_enforcer.ps1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
