--- a/.github/workflows/wheel_distributing.yml
+++ b/.github/workflows/wheel_distributing.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Override version with workflow run number
         id: override_version
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.ReleaseType == 'Test')
         run: |
           echo "VERSION = \"0.0.${{ github.run_number }}\"" > src/${{ inputs.SourceFolderName }}/promptflow/version.txt
           echo "VERSION: 0.0.${{ github.run_number }}"
