--- a/examples/flows/standard/web-classification/flow.dag.yaml
+++ b/examples/flows/standard/web-classification/flow.dag.yaml
@@ -41,7 +41,7 @@ nodes:
     url: ${inputs.url}
     text_content: ${summarize_text_content.output}
     examples: ${prepare_examples.output}
-  connection: open_ai_connection
+  connection: azure_open_ai_connection
   api: chat
 - name: convert_to_dict
   type: python
@@ -66,7 +66,7 @@ node_variants:
             max_tokens: 128
             temperature: 0.2
             text: ${fetch_text_content_from_url.output}
-          connection: open_ai_connection
+          connection: azure_open_ai_connection
           api: chat
       variant_1:
         node:
@@ -80,5 +80,5 @@ node_variants:
             max_tokens: 256
             temperature: 0.3
             text: ${fetch_text_content_from_url.output}
-          connection: open_ai_connection
+          connection: azure_open_ai_connection
           api: chat
