--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/labeler@v4
 
-    - name: apply a label to PRs from forks
+    - name: apply a label to pull request from fork
       if: ${{ github.event.pull_request.head.repo.full_name != 'microsoft/promptflow' }}
       uses: actions/github-script@v7
       with:
