--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -20,5 +20,5 @@ jobs:
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
-            labels: ['fork']
+            labels: ['external']
           })
