--- a/.github/workflows/sdk-cli-perf-monitor-test.yml
+++ b/.github/workflows/sdk-cli-perf-monitor-test.yml
@@ -1,5 +1,4 @@
 # execute tests in src/promptflow/tests/sdk_cli_azure_test, src/promptflow/tests/sdk_cli_test with mark perf_monitor_test
-# when pull_request triggers, use live mode
 
 name: sdk-cli-perf-monitor-test
 
@@ -9,6 +8,7 @@ on:
     paths:
       - src/promptflow/**
       - scripts/building/**
+      - .github/workflows/sdk-cli-perf-monitor-test.yml
 
   schedule:
     - cron: "0 */6 * * *"  # Run every 6 hours
@@ -54,15 +54,10 @@ jobs:
           setupType: ${{ env.packageSetupType }}
           scriptPath: ${{ env.testWorkingDirectory }}
 
-      - name: Azure login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: generate live test resources (non pull_request workflow)
-        uses: "./.github/actions/step_generate_configs"
-        with:
-          targetFolder: ${{ env.testWorkingDirectory }}
+      - name: Generate (mock) connections.json
+        shell: pwsh
+        working-directory: ${{ env.testWorkingDirectory }}
+        run: cp ${{ github.workspace }}/src/promptflow/dev-connections.json.example ${{ github.workspace }}/src/promptflow/connections.json
 
       - name: Run Test
         shell: pwsh
