fix: make .env as a YAML

--- a/examples/flows/standard/describe-image/.env.example
+++ b/examples/flows/standard/describe-image/.env.example
@@ -1,3 +1,6 @@
-AZURE_OPENAI_API_KEY=<your_AOAI_key>
-AZURE_OPENAI_API_BASE=<your_AOAI_endpoint>
-AZURE_OPENAI_API_VERSION=2023-03-15-preview
+$schema: https://azuremlschemas.azureedge.net/promptflow/latest/AzureOpenAIConnection.schema.json
+name: aoai_gpt4v_connection
+type: azure_open_ai
+api_key: "<your_AOAI_key>"
+api_base: "<your_AOAI_endpoint>"
+api_type: "azure"
