--- a/examples/flows/standard/describe-image/.env.example
+++ b/examples/flows/standard/describe-image/.env.example
@@ -1,6 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/promptflow/latest/AzureOpenAIConnection.schema.json
 name: aoai_gpt4v_connection
 type: azure_open_ai
-api_key: "<your_AOAI_key>"
-api_base: "<your_AOAI_endpoint>"
-api_type: "azure"
+api_key: <your_AOAI_key>
+api_base: <your_AOAI_endpoint>
+api_type: azure
