--- a/examples/flows/chat/chat-with-image/flow.dag.yaml
+++ b/examples/flows/chat/chat-with-image/flow.dag.yaml
@@ -24,7 +24,7 @@ nodes:
     path: chat.jinja2
   inputs:
     connection: aoai_gpt4v_connection
-    deployment_name: gpt-4v
+    deployment_name: gpt-4
     max_tokens: 512
     chat_history: ${inputs.chat_history}
     question: ${inputs.question}
