--- a/.github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml
+++ b/.github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml
@@ -59,9 +59,11 @@ jobs:
         run: |
           if [[ -e .env ]]; then
             pf connection create --file .env --name chat_with_pdf_custom_connection
-            pf connection list
           fi
-          
+          if [[ -e azure_openai.yml ]]; then
+            pf connection create --file azure_openai.yml --name chat_with_pdf_custom_connection
+          fi
+          pf connection list
       - name: Create run.yml
         working-directory: examples/tutorials/e2e-development
         run: |
