--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -15,6 +15,12 @@ on:
         required: false
         description: 'Version of promptflow to install (optional). Will build locally if not specified.'
 
+      set_msi_private_version:
+        type: string
+        default: ""
+        required: false
+        description: 'Set the version of the private msi installer'
+
 env:
   packageSetupType: promptflow_with_extra
   testWorkingDirectory: src/promptflow
@@ -74,7 +80,11 @@ jobs:
             if ($version -ne $run_version) {
               throw "Version input does not match the version in promptflow package. Version input: $version, version in promptflow package: $run_version"
             }
-          } else {
+          } 
+          elseif ($env:MSI_PRIVATE_VERSION) {
+            $version=$env:MSI_PRIVATE_VERSION
+          }
+          else {
             $prefix = 0
             $year = [int](Get-Date -Format "yy")
             $monthday = [int](Get-Date -Format "MMdd")
@@ -84,6 +94,7 @@ jobs:
           echo "::set-output name=version::$version"
         env:
           INPUT_VERSION: ${{ github.event.inputs.version }}
+          MSI_PRIVATE_VERSION: ${{ github.event.inputs.set_msi_private_version }}
         shell: pwsh
 
       - name: Build Pyinstaller project
