--- a/src/promptflow/tests/test_configs/recordings/test_flow_operations_TestFlow_test_list_flows.yaml
+++ b/src/promptflow/tests/test_configs/recordings/test_flow_operations_TestFlow_test_list_flows.yaml
@@ -5,12 +5,12 @@ interactions:
       Accept:
       - application/json
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, br
       Connection:
       - keep-alive
       User-Agent:
-      - promptflow-sdk/0.0.1 azure-ai-ml/1.10.0 azsdk-python-mgmt-machinelearningservices/0.1.0
-        Python/3.10.13 (Windows-10-10.0.22631-SP0)
+      - promptflow-sdk/0.0.1 azure-ai-ml/1.12.1 azsdk-python-mgmt-machinelearningservices/0.1.0
+        Python/3.9.18 (Windows-10-10.0.22631-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000
   response:
@@ -23,7 +23,7 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '3548'
+      - '3630'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -39,7 +39,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.023'
+      - '0.025'
     status:
       code: 200
       message: OK
@@ -49,12 +49,12 @@ interactions:
       Accept:
       - application/json
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, br
       Connection:
       - keep-alive
       User-Agent:
-      - promptflow-sdk/0.0.1 azure-ai-ml/1.10.0 azsdk-python-mgmt-machinelearningservices/0.1.0
-        Python/3.10.13 (Windows-10-10.0.22631-SP0)
+      - promptflow-sdk/0.0.1 azure-ai-ml/1.12.1 azsdk-python-mgmt-machinelearningservices/0.1.0
+        Python/3.9.18 (Windows-10-10.0.22631-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000/datastores?count=30&isDefault=true&orderByAsc=false
   response:
@@ -91,7 +91,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.730'
+      - '0.106'
     status:
       code: 200
       message: OK
@@ -108,7 +108,7 @@ interactions:
       Accept:
       - '*/*'
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, br
       Connection:
       - keep-alive
       Content-Length:
@@ -121,79 +121,18 @@ interactions:
     uri: https://eastus.api.azureml.ms/index/v1.0/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000/entities
   response:
     body:
-      string: '{"totalCount": 16, "value": [{"relevancyScore": 1.0, "entityResourceName":
-        "promptflow-eastus", "highlights": {}, "usage": {"totalCount": 0}, "schemaId":
-        "37f2e71d-b027-5d1c-a435-7d249ef7f98a", "entityId": "azureml://location/eastus/workspaceId/3e123da1-f9a5-4c91-9234-8d9ffbb39ff5/type/flows/objectId/3e123da1-f9a5-4c91-9234-8d9ffbb39ff5:7bde7cc6-fae2-4dd0-85bc-0fd6c7079a67",
-        "kind": "Unversioned", "annotations": {"archived": false, "tags": {"owner":
-        "sdk"}, "flowName": "107522a2-b3cf-4fdb-8375-a651ebe39a66", "createdDate":
-        "2023-11-15T09:07:07.5166016Z", "lastModifiedDate": "2023-11-15T09:07:07.5166017Z",
-        "owner": {"userObjectId": "dccfa7b6-87c6-4f1e-af43-555f876e37a7", "userTenantId":
-        "00000000-0000-0000-0000-000000000000", "userName": "Zhengfei Wang"}, "isArchived":
-        false, "vmSize": null, "maxIdleTimeSeconds": null, "name": null, "description":
-        "test flow"}, "properties": {"updatedTime": "0001-01-01T00:00:00+00:00", "creationContext":
-        {"createdTime": "2023-11-15T09:07:07.5166016+00:00", "createdBy": {"userObjectId":
-        "dccfa7b6-87c6-4f1e-af43-555f876e37a7", "userTenantId": "00000000-0000-0000-0000-000000000000",
-        "userName": "Zhengfei Wang"}, "creationSource": null}, "flowId": "7bde7cc6-fae2-4dd0-85bc-0fd6c7079a67",
-        "experimentId": "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5", "flowType": "Default",
-        "flowDefinitionFilePath": "Users/unknown_user/promptflow/107522a2-b3cf-4fdb-8375-a651ebe39a66/flow.dag.yaml"},
-        "internal": {}, "updateSequence": 638356360275166017, "type": "flows", "version":
-        null, "entityContainerId": "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5", "entityObjectId":
-        "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5:7bde7cc6-fae2-4dd0-85bc-0fd6c7079a67",
-        "resourceType": "Workspace", "relationships": []}, {"relevancyScore": 1.0,
-        "entityResourceName": "promptflow-eastus", "highlights": {}, "usage": {"totalCount":
-        0}, "schemaId": "37f2e71d-b027-5d1c-a435-7d249ef7f98a", "entityId": "azureml://location/eastus/workspaceId/3e123da1-f9a5-4c91-9234-8d9ffbb39ff5/type/flows/objectId/3e123da1-f9a5-4c91-9234-8d9ffbb39ff5:bf77c549-7b42-4768-b476-c131212136e0",
-        "kind": "Unversioned", "annotations": {"archived": false, "tags": {"owner":
-        "sdk"}, "flowName": "460eb2b4-7a37-4fc5-bebf-52fe7f824594", "createdDate":
-        "2023-11-15T09:01:51.6098268Z", "lastModifiedDate": "2023-11-15T09:01:51.6098268Z",
-        "owner": {"userObjectId": "dccfa7b6-87c6-4f1e-af43-555f876e37a7", "userTenantId":
-        "00000000-0000-0000-0000-000000000000", "userName": "Zhengfei Wang"}, "isArchived":
-        false, "vmSize": null, "maxIdleTimeSeconds": null, "name": null, "description":
-        "test flow"}, "properties": {"updatedTime": "0001-01-01T00:00:00+00:00", "creationContext":
-        {"createdTime": "2023-11-15T09:01:51.6098268+00:00", "createdBy": {"userObjectId":
-        "dccfa7b6-87c6-4f1e-af43-555f876e37a7", "userTenantId": "00000000-0000-0000-0000-000000000000",
-        "userName": "Zhengfei Wang"}, "creationSource": null}, "flowId": "bf77c549-7b42-4768-b476-c131212136e0",
-        "experimentId": "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5", "flowType": "Default",
-        "flowDefinitionFilePath": "Users/unknown_user/promptflow/460eb2b4-7a37-4fc5-bebf-52fe7f824594/flow.dag.yaml"},
-        "internal": {}, "updateSequence": 638356357116098268, "type": "flows", "version":
-        null, "entityContainerId": "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5", "entityObjectId":
-        "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5:bf77c549-7b42-4768-b476-c131212136e0",
-        "resourceType": "Workspace", "relationships": []}, {"relevancyScore": 1.0,
-        "entityResourceName": "promptflow-eastus", "highlights": {}, "usage": {"totalCount":
-        0}, "schemaId": "37f2e71d-b027-5d1c-a435-7d249ef7f98a", "entityId": "azureml://location/eastus/workspaceId/3e123da1-f9a5-4c91-9234-8d9ffbb39ff5/type/flows/objectId/3e123da1-f9a5-4c91-9234-8d9ffbb39ff5:17ccb233-0eb1-4d9b-bdcc-165f130f2cba",
-        "kind": "Unversioned", "annotations": {"archived": false, "tags": {"owner":
-        "sdk"}, "flowName": "7621c2f8-9935-477c-8896-6367fd1073c0", "createdDate":
-        "2023-11-15T08:58:38.7914613Z", "lastModifiedDate": "2023-11-15T08:58:38.7914613Z",
-        "owner": {"userObjectId": "dccfa7b6-87c6-4f1e-af43-555f876e37a7", "userTenantId":
-        "00000000-0000-0000-0000-000000000000", "userName": "Zhengfei Wang"}, "isArchived":
-        false, "vmSize": null, "maxIdleTimeSeconds": null, "name": null, "description":
-        "test flow"}, "properties": {"updatedTime": "0001-01-01T00:00:00+00:00", "creationContext":
-        {"createdTime": "2023-11-15T08:58:38.7914613+00:00", "createdBy": {"userObjectId":
-        "dccfa7b6-87c6-4f1e-af43-555f876e37a7", "userTenantId": "00000000-0000-0000-0000-000000000000",
-        "userName": "Zhengfei Wang"}, "creationSource": null}, "flowId": "17ccb233-0eb1-4d9b-bdcc-165f130f2cba",
-        "experimentId": "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5", "flowType": "Default",
-        "flowDefinitionFilePath": "Users/unknown_user/promptflow/7621c2f8-9935-477c-8896-6367fd1073c0/flow.dag.yaml"},
-        "internal": {}, "updateSequence": 638356355187914613, "type": "flows", "version":
-        null, "entityContainerId": "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5", "entityObjectId":
-        "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5:17ccb233-0eb1-4d9b-bdcc-165f130f2cba",
-        "resourceType": "Workspace", "relationships": []}], "nextSkip": 3, "entityContainerIdsToEntityContainerMetadata":
-        {"3e123da1-f9a5-4c91-9234-8d9ffbb39ff5": {"resourceId": "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5",
-        "subscriptionId": "96aede12-2f73-41cb-b983-6d11a904839b", "resourceGroup":
-        "promptflow", "resourceName": "promptflow-eastus", "entityContainerType":
-        "Workspace", "regions": [{"regionName": "eastus", "isPrimaryRegion": true}],
-        "tenantId": "00000000-0000-0000-0000-000000000000", "immutableResourceId":
-        "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5", "isPublicResource": false}}, "resourcesNotQueriedReasons":
-        {}, "numberOfEntityContainersNotQueried": 0, "fanoutData": {"Multitenant":
-        {"nextSkip": 3, "isShardDone": false, "didShardFail": false, "totalCount":
-        16, "resourceIdsOnShardThisPage": ["3e123da1-f9a5-4c91-9234-8d9ffbb39ff5"]}},
-        "regionalFanoutState": {"shardFanoutStates": [{"shardId": "Multitenant", "nextSkip":
-        3, "isPlanExecutionDone": false, "didPlanExecutionFail": false, "totalCount":
-        16, "resourceIdsOnShardThisPage": ["3e123da1-f9a5-4c91-9234-8d9ffbb39ff5"]}],
-        "firstPageStartTime": null}, "shardErrors": {}, "canSupportSkip": true}'
+      string: '{"totalCount": 0, "value": [], "nextSkip": null, "entityContainerIdsToEntityContainerMetadata":
+        {}, "resourcesNotQueriedReasons": {}, "numberOfEntityContainersNotQueried":
+        0, "fanoutData": {"Multitenant": {"nextSkip": 0, "isShardDone": true, "didShardFail":
+        false, "totalCount": 0, "resourceIdsOnShardThisPage": []}}, "regionalFanoutState":
+        {"shardFanoutStates": [{"shardId": "Multitenant", "nextSkip": 0, "isPlanExecutionDone":
+        true, "didPlanExecutionFail": false, "totalCount": 0, "resourceIdsOnShardThisPage":
+        []}], "firstPageStartTime": null}, "shardErrors": {}, "canSupportSkip": true}'
     headers:
       connection:
       - keep-alive
       content-length:
-      - '6106'
+      - '572'
       content-type:
       - application/json; charset=utf-8
       strict-transport-security:
@@ -205,7 +144,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.070'
+      - '0.049'
     status:
       code: 200
       message: OK
