--- a/examples/orchestration_run/orchestrate_gen_data.yaml
+++ b/examples/orchestration_run/orchestrate_gen_data.yaml
@@ -3,7 +3,7 @@ $schema: https://azuremlschemas.azureedge.net/promptflow/latest/OrchestrationRun
 jobs:
 # data prepare
   data_gen:
-    type: flow                         # we might introduce a new type: data_gen 
+    type: flow                         # we might introduce a new type: data_gen
     flow: ../data/generate_data.yaml
     column_mapping:
       seed: xxx.pdf
@@ -49,7 +49,10 @@ jobs:
     environment:                      # Use automatic runtime created from this environment
       python_requirements_txt: requirements.txt
   avg_similarity:
-    type: aggregation 
+    type: aggregation
+    source:
+      type: package
+      tool: promptflow.tools.built_in_aggregation
     op: AVG                           # predefined aggregation
     input: ${eval1.outputs.score}
     # Use automatic runtime default to promptlow runtime base image
