--- a/src/promptflow/tests/test_configs/flows/assistant_tool_v2/assistant_definition.yaml
+++ b/src/promptflow/tests/test_configs/flows/assistant_tool_v2/assistant_definition.yaml
@@ -16,7 +16,7 @@ tools:
   source:
     type: code
     path: get_current_location.py
-  pre_assigned_inputs:
+  predefined_inputs:
     preset_int: 1
     preset_conn: azure_open_ai_connection
 - type: promptflow_tool
