--- a/src/promptflow/tests/test_configs/flows/assistant_tool_v2/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/assistant_tool_v2/flow.dag.yaml
@@ -19,4 +19,34 @@ nodes:
     conn: openai_connection
     content: ${inputs.content}
     assistant_id: ${inputs.assistant_id}
-    assistant_definition: assistant_definition.yaml
+    assistant_definition:
+      module: gpt-4-1106-preview
+      instructions: You are a helpful assistant.
+      tools:
+      - type: promptflow_tool
+        tool_type: python
+        source:
+          type: code
+          path: get_all_clothes.py
+      - type: promptflow_tool
+        tool_type: python
+        source:
+          type: code
+          path: get_calorie.py
+      - type: promptflow_tool
+        tool_type: python
+        source:
+          type: code
+          path: get_current_location.py
+        predefined_inputs:
+          predefined_input: 1
+      - type: promptflow_tool
+        tool_type: python
+        source:
+          type: code
+          path: get_current_weather.py
+      - type: promptflow_tool
+        tool_type: python
+        source:
+          type: code
+          path: multiply.py
